--- a/ChangeLog
+++ b/ChangeLog
@@ -69,3 +69,5 @@ V 1.1 Fixed the logic error in db setup
 V 1.2 The ARRL made a change in their website which forced me to use a different method to read the website. (read_session_count.py)
 
 V1.2.1 Found and corrected an obscure logic bug in read_session_count.py
+
+V1.2.2 Fixed an error in the ve_utilities.py file, updated GLAARG session read.
