--- a/ChangeLog
+++ b/ChangeLog
@@ -68,7 +68,10 @@ V 1.1 Fixed the logic error in db setup
 
 V 1.2 The ARRL made a change in their website which forced me to use a different method to read the website. (read_session_count.py)
 
-V1.2.1 Found and corrected an obscure logic bug in read_session_count.py
+V 1.2.1 Found and corrected an obscure logic bug in read_session_count.py
 
-V1.2.2 Fixed an error in the ve_utilities.py file, updated GLAARG session read, 
+V 1.2.2 Fixed an error in the ve_utilities.py file, updated GLAARG session read, 
         For Linux, had to rewrite the program to use a virtual Python environment due to a clash with the default system Python install.
+
+V 1.3 Re-worked the import logic for both the ARRL and GLAARG data. If a new VE was added to the respective VEC, ASC will now properly
+        catch the new VE record and add it to the database.
