--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-V 0.90.0  Initial program and upload
+V 0.90.0  29_Jan2023; Initial program and upload
 
 V 0.90.1  Some minor GUI fixes
 
@@ -19,7 +19,7 @@ V 0.92.1 Added a check for a new VE during an update
 V 0.93 Added refresh of main GUI screen, fixed lookup for an exact match, fixed the detailed 
         report, added the ability to generate a report based on a text file input
 
-V 0.93 Feb18   Discovered a shortcoming in the GUI and fixed it
+V 0.93 18_Feb2023;  Discovered a shortcoming in the GUI and fixed it
 
 V 0.94 Added sort ability to detailed report page. The county sort is only for the state level of reports.
         Also added a button for the direction of sort.
@@ -35,7 +35,7 @@ V 0.96.1 Windows problem with creating a desktop shortcut. Fixed ve_utilities.py
 V 0.96.2 Removed warning from detailed report. Cleaned up read_session_count(). Fixed summary report.
           Updated version number.
 
-V 0.97 Added support for GLAARG stats to the program
+V 0.97 20_Jun2023; Added support for GLAARG stats to the program
 
 V 0.97.1 Adjusted GLAARG import/update messages
 
@@ -64,14 +64,14 @@ V 1.0 Added the ability to reset the database in the case of corruption causing 
 
 V 1.0.1 Minor fix in database check
 
-V 1.1 Fixed the logic error in db setup
+V 1.1 17_Oct2023; Fixed the logic error in db setup, New release to public
 
-V 1.2 The ARRL made a change in their website which forced me to use a different method to read the website. (read_session_count.py)
+V 1.2 28_Nov2023; The ARRL made a change in their website which forced me to use a different method to read the website. (read_session_count.py)
 
 V 1.2.1 Found and corrected an obscure logic bug in read_session_count.py
 
 V 1.2.2 Fixed an error in the ve_utilities.py file, updated GLAARG session read, 
         For Linux, had to rewrite the program to use a virtual Python environment due to a clash with the default system Python install.
 
-V 1.3 Re-worked the import logic for both the ARRL and GLAARG data. If a new VE was added to the respective VEC, ASC will now properly
+V 1.3 03_Jan2024; Re-worked the import logic for both the ARRL and GLAARG data. If a new VE was added to the respective VEC, ASC will now properly
         catch the new VE record and add it to the database.
