--- a/ChangeLog
+++ b/ChangeLog
@@ -75,3 +75,5 @@ V 1.2.2 Fixed an error in the ve_utilities.py file, updated GLAARG session read,
 
 V 1.3 03_Jan2024; Re-worked the import logic for both the ARRL and GLAARG data. If a new VE was added to the respective VEC, ASC will now properly
         catch the new VE record and add it to the database.
+
+V 1.4 17_Feb_2024; ran files through RUFF linter and cleaned up the coding errors, Added a top 100 report to menu. Results are saved in the REPORTS directory
