--- a/ChangeLog
+++ b/ChangeLog
@@ -81,3 +81,5 @@ V 1.4 17_Feb_2024; ran files through RUFF linter and cleaned up the coding error
 V 1.5 06_Apr_2024; Fixed a defect in the filtering logic used to extract data (read_session_data.py)
 
 V 1.5.1 25_Apr_2024; Fixed another defect in the filtering logic (read_sesion_data.py)
+
+V 1.5.2 26_Apr_2024; A re-write of the filtering code (read_session_data.py)
