--- a/ChangeLog
+++ b/ChangeLog
@@ -85,3 +85,5 @@ V 1.5.1 25_Apr_2024; Fixed another defect in the filtering logic (read_sesion_da
 V 1.5.2 26_Apr_2024; A re-write of the filtering code (read_session_data.py)
 
 V 1.5.3  27_Apr_2024; Added code to trap database errors in detailed_top_100.py
+
+V 1.6 30_Jun_2024; A rewrite to use a virtual Python environment, Fixed a GLAARG report issue
